--- a/assets/style.css
+++ b/assets/style.css
@@ -47,3 +47,30 @@ body {
     color: white;
   }
   
+.present {
+    background-color: #f0b2ae;
+    color: white;
+  }
+  
+  .future {
+    background-color: #b7f3b7;
+    color: white;
+  }
+  
+  .btn{
+    margin-left: 50%;
+    color:#fff;
+  }
+  
+  .saveBtn {
+    border-left: 1px solid black;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: lightblue;
+    color: white;
+  }
+  
+  .saveBtn i:hover {
+    font-size: 20px;
+    transition: all .3s ease-in-out;
+  }
